fix: [Portal-Next] Top nav bar buttons shifting when clicking
(cherry picked from commit 777ce4afa64fc1312814e76263f5800af989f4bd)

--- a/gravitee-apim-portal-webui-next/src/components/nav-bar/nav-bar.component.scss
+++ b/gravitee-apim-portal-webui-next/src/components/nav-bar/nav-bar.component.scss
@@ -53,6 +53,7 @@
       outlined-hover-state-layer-opacity: 7%,
       filled-horizontal-padding: app-theme.$nav-bar-link-padding,
       outlined-horizontal-padding: app-theme.$nav-bar-link-padding,
+      outlined-outline-width: 0,
     )
   );
 }
